# finance

./: .deepsource.toml  .gitignore  manage.py  pyproject.toml
finance_all/: asgi.py  settings.py  urls.py  wsgi.py
finances/: admin.py  ajax_datatable.py  apps.py  forms.py  models.py  urls.py  views.py
orders/: admin.py  ajax.py  ajax_datatable.py  apps.py  forms.py  models.py  urls.py  views.py
orders/funcs/: get_currency.py  get_img_site.py
templates/: base.html
templates/ajax_datatable/orders/: render_row_details.html
templates/finances/: index.html
templates/orders/: table.html  table_order.html  table_wishlist.html
templates/users/: profile.html  registration.html
users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
