[tool.poetry]
name = "finance-all"
version = "0.1.0"
description = ""
authors = ["dt50 <alexfretka@gmail.com>"]
readme = "README.md"
packages = [{include = "finance_all"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
